hard-gists/4149031/run.log
=== Docker Run Log for 4149031 ===
Started at: Mi 29. Okt 14:23:19 CET 2025

[2025-10-29 14:23:20] START: Running container for 4149031
[2025-10-29 14:23:20] SUCCESS: Container 798a2e868fcc9e4c10126ff8f782a4aa33b543fba5c9d456357f43d020296bd6 started for 4149031
=== Container logs for 4149031 ===
  File "/snippet.py", line 73
    print 'not complete'
    ^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 4149031 ===
[2025-10-29 14:23:22] INFO: Container 798a2e868fcc9e4c10126ff8f782a4aa33b543fba5c9d456357f43d020296bd6 has stopped
